# CalcMassive

./: CMakeLists.txt  main.cu  main.exp  rastrigin_gpu_dim30_50pop.txt  results_dim_10_pop_30.txt  results_dim_10_pop_50.txt  results_dim_10_pop_70.txt  results_dim_30_pop_30.txt  results_dim_30_pop_50.txt  results_dim_30_pop_70.txt  results_dim_50_pop_30.txt  results_dim_50_pop_50.txt  results_dim_50_pop_70.txt
ackely/: results_dim_10_pop_30.txt  results_dim_10_pop_50.txt  results_dim_10_pop_70.txt  results_dim_30_pop_30.txt  results_dim_30_pop_50.txt  results_dim_30_pop_70.txt  results_dim_50_pop_30.txt  results_dim_50_pop_50.txt  results_dim_50_pop_70.txt
ackely/timing/: results_dim_10_pop_30.txt  results_dim_10_pop_50.txt  (+7 more)
rastrigin/: results_dim_10_pop_30.txt  results_dim_10_pop_50.txt  results_dim_10_pop_70.txt  results_dim_30_pop_30.txt  results_dim_30_pop_50.txt  results_dim_30_pop_70.txt  results_dim_50_pop_30.txt  results_dim_50_pop_50.txt  results_dim_50_pop_70.txt
rosenbrock/: results_dim_10_pop_30.txt  results_dim_10_pop_50.txt  results_dim_10_pop_70.txt  results_dim_30_pop_30.txt  results_dim_30_pop_50.txt  results_dim_30_pop_70.txt  results_dim_50_pop_30.txt  results_dim_50_pop_50.txt  results_dim_50_pop_70.txt
sphère/: results_dim_10_pop_30.txt  results_dim_10_pop_50.txt  results_dim_10_pop_70.txt  results_dim_30_pop_30.txt  results_dim_30_pop_50.txt  results_dim_30_pop_70.txt  results_dim_50_pop_30.txt  results_dim_50_pop_50.txt  results_dim_50_pop_70.txt
src/: firefly.cpp  firefly.cu  firefly.exp  firefly.h  firefly.lib  main.cpp
(+27 files in other folders)
